manifests/kube.deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: demoxxx1-svc
spec:
  ports:
  - name: http
    port: 9080
  selector:
    app: demoxxx1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demoxxx1-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demoxxx1
        version: v1
    spec:
      containers:
      - name: demoxxx1
        image: demoxxx1-v1:latest

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demoxxx1
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /demoxxx
        backend:
          serviceName: demoxxx1-svc
          servicePort: 9080
